<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".activity.TimelineActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/detailAppTitle"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/detailApp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editPIN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/HintPin"
        android:inputType="number"
        tools:ignore="TextFields"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/action_start_oauth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twitter_oauth"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/action_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin"
            tools:ignore="ButtonStyle"/>

    </LinearLayout>

</LinearLayout>
